# RealTimePathTracingResearchFramework

./: .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE.md  README.md  app.cpp  cmdline.cpp  cmdline.h  imstate.cpp  imstate.h  main.cpp  pch.hpp  third-party-components.md
.github/workflows/: install_dependencies.sh  static_analysis.yml
ext/: CMakeLists.txt
ext/glad/: CMakeLists.txt  License.md
ext/glad/include/KHR/: khrplatform.h
ext/glad/include/glad/: glad.h
ext/glad/src/: glad.c
ext/libvkr/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
ext/libvkr/ext/: CMakeLists.txt  ext.cmake  extract_msi.ps1  meshopt_triangle_remap.patch
ext/libvkr/ext/meshoptimizer-0.18/src/: meshoptimizer.h  vcacheoptimizer.cpp
ext/libvkr/ext/numpy-1.21.0/include/numpy/: ndarraytypes.h  npy_common.h
ext/libvkr/scripts/: README.md  install_blender_addon.bpy  install_blender_addon.sh  vkr2obj.py  vkrinfo.py  vktconvert.py  vktinfo.py
ext/libvkr/scripts/blender_vkr/: CMakeLists.txt  __init__.py  operator_file_export_camera_path.py  operator_file_export_pbr_textures.py  operator_file_export_vkrs.py
ext/libvkr/src/: vkr.c  vkr.h  vkrmodule.c  vkrtest.c  vktconvert.c
ext/stb/: stb.cpp
libapp/: CMakeLists.txt  app_state.cpp  app_state.h  benchmark_info.cpp  benchmark_info.h  camera_state.h  data_capture_state.h  imutils.cpp  imutils.h  scene_state.cpp  scene_state.h  shell.cpp  shell.h
librender/: CMakeLists.txt  bounds.cpp  bounds.h  camera.h  dequantize.glsl  gpu_programs.cpp  gpu_programs.h  halton.h  lights.cpp  lights.h  material.cpp  material.h  mesh.cpp  mesh.h  mesh_decode.h  quantization.cpp  quantization.h  quantize.h  raytrace_backend.h  render_backend.cpp  render_backend.h  render_data.h  render_params.glsl.h  scene.cpp  scene.h
rendering/: CMakeLists.txt  defaults.glsl  gpu_programs.cmake  gpu_programs.h  language.glsl  language.hpp  pathspace.h  util.glsl
rendering/bsdfs/: base_material.h.glsl  gltf_bsdf.glsl  hit_point.glsl  simple_bsdf.glsl  texture_channel_mask.h
rendering/color/: color_matching.glsl  color_matching.h
rendering/lights/: light.h.glsl  point.h.glsl  quad.glsl  quad.h.glsl  sun.glsl  tri.glsl  tri.h.glsl
rendering/lights/sky_model_arhosek/: sky_model.cpp  sky_model.glsl  sky_model.h  sky_model.h.glsl  sky_model_data_ciexyz.h  sky_model_data_rgb.h  sky_model_data_spectral.h
rendering/mc/: light_sampling.h  lights_linear.glsl  lights_point.glsl  lights_sun.glsl  nee.glsl  nee_interface.glsl  shade_base_material.glsl  shade_megakernel.glsl  shading_interface.glsl
rendering/pointsets/: bn_data.h  bn_rng.glsl  bn_tables.h  hashing.glsl  lcg_rng.glsl  sample_order.glsl  selected_rng.glsl  sobol.glsl  sobol_data.h  sobol_tables.h
rendering/postprocess/: color_grading_utils.glsl  reprojection.glsl  reprojection.h  tonemapping.h  tonemapping_utils.glsl
rendering/rt/: footprint.glsl  geometry.h.glsl  hit.glsl  material_textures.glsl  materials.glsl
rendering/tests/: compile.cpp  gltf_bsdf.cpp
rendering/tools/: prepare_sobol.cpp  sobol_tables_src.h
scripts/: ide_project_tools.cmake
util/: CMakeLists.txt  compare_exr.cpp  compute_util.h  device_backend.cpp  device_backend.h  error_io.cpp  error_io.h  file_mapping.cpp  file_mapping.h  image.cpp  image.h  interactive_camera.cpp  interactive_camera.h  lod.cpp  lod.h  online_stats.h  profiling.cpp  profiling.h  ref_counted.h  sha1_bytes.cpp  sha1_bytes.h  types.h  unordered_vector.hpp  util.cpp  util.h  write_image.cpp  write_image.h
util/display/: CMakeLists.txt  display.h  gldisplay.cpp  gldisplay.h  imgui_backend.cpp  imgui_backend.h  render_graphic.h  shader.cpp  shader.h
vulkan/: CMakeLists.txt  accumulate.glsl  command_buffer_utils.cpp  command_buffer_utils.h  compute_vulkan.cpp  compute_vulkan.h  geometry.glsl  gpu_params.glsl  hit.rchit  miss.rmiss  process_samples.comp  pt_megakernel.comp  pt_megakernel.glsl  pt_megakernel.rgen  raygen.rgen  render_pipeline_vulkan.cpp  render_pipeline_vulkan.h  render_sky.cpp  render_vulkan.cpp  render_vulkan.h  render_vulkan_extensions.cpp  render_vulkan_spirv.h.in  resource_utils.cpp  resource_utils.h  rt_debug.comp  rt_intersect.comp  setup_iterative_pt.glsl  setup_pixel_assignment.glsl  vkdisplay.cpp  vkdisplay.h  vulkan_utils.cpp  vulkan_utils.h  vulkanrt_utils.cpp  vulkanrt_utils.h
vulkan/cmake/: glslcli.cmake
vulkan/light_sampling/: render_binned_lights.cpp  render_binned_lights.h
vulkan/pipeline_pt/: accumulate.glsl  any_hit.glsl  any_hit.rahit  hit.rchit  miss.rmiss  occlusion_miss.rmiss  perspective.rgen  setup_recursive_pt.glsl
vulkan/pipeline_raster/: basic.frag  basic.vert  raster_scene_vulkan.cpp  raster_scene_vulkan.h
vulkan/pointsets/: render_bn.cpp  render_bn.h  render_sobol.cpp  render_sobol.h
vulkan/processing/: example.comp  process_example.cpp  process_example.h  process_profiling_tools.cpp  process_profiling_tools.h  process_taa.comp  process_taa.cpp  process_taa.h
vulkan/profiling/: profiling_scopes.cpp  profiling_scopes.h
